k8s/manifests/ouestlinfra/deployment.yml
---

# Let's define here our deployment file
# for our simple http service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ouestlinfra
  labels:
    app: ouestlinfra

spec:
  replicas: 2 # Here we create 2 replicas for our static webserver
  selector:
    matchLabels:
      app: ouestlinfra
  template: # Let's define the template for the default conf 
    metadata:
      labels:
        app: ouestlinfra
    spec:
      containers:
        - name: ouestlinfra
          image: nginx
          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html
