k8s/manifests/ouestlinfra/service.yml
---

# Let's declare our basic service
apiVersion: v1
kind: Service
metadata:
  name: ouestlinfra
  namespace: ouestlinfra

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: ouestlinfra
