k8s/manifests/ouestlinfra/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ouestlinfra
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTPP"

spec:
  ingressClassName: public
  rules:
    - host: ouestlinfra.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ouestlinfra
                port:
                  name: http
